tweaked the gperf generation code a little to make the error a little more obvious.
moved the logic into a seperate file (mper_keywords.gperf.sh) which means that
the warning messages are not dumped to the console unless they actually need to
be.

i'm still not entirely happy with this setup becuase the warning is dumped
inline with all the other stuff that is being spewed, so you'd have to be really
looking to notice it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -56,6 +56,7 @@ include_HEADERS = \
 	mper_base64.h \
 	mper_keywords.h \
 	mper_keywords.gperf \
+	mper_keywords.gperf.sh \
 	mper_msg.h \
 	mper_msg_reader.h \
 	mper_msg_writer.h \
@@ -110,17 +111,6 @@ test_msg_writer_SOURCES = \
 BUILT_SOURCES = mper_keywords.c
 
 mper_keywords.c: Makefile mper_keywords.h mper_keywords.gperf
-	if $(GPERF) $(GPERFFLAGS) \
-                mper_keywords.gperf >$@~; then \
-		mv $@~ $@; \
-             elif $(GPERF) --version >/dev/null 2>&1; then \
-		echo "WARNING: gperf failed. $@ may not be up to date"; \
-               rm $@~; \
-               exit 0; \
-             else \
-		echo "WARNING: gperf not installed. $@ may not be up to date"; \
-               rm $@~; \
-               touch $@; \
-             fi
+	./mper_keywords.gperf.sh "$(GPERF)" "$(GPERFFLAGS)" "$@"
 
 CLEANFILES = *~
